--- a/iDaBere/app/src/main/res/layout/activity_add_choice.xml
+++ b/iDaBere/app/src/main/res/layout/activity_add_choice.xml
@@ -119,47 +119,51 @@
         android:layout_height="wrap_content"
         android:orientation="vertical"
         android:weightSum="4">
-        <LinearLayout
+
+        <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:paddingTop="@dimen/activity_vertical_margin"
+            android:orientation="horizontal"
             android:paddingBottom="@dimen/activity_vertical_margin"
-            android:orientation="horizontal">
+            android:paddingTop="@dimen/activity_vertical_margin">
+
             <TextView
-                android:layout_weight="2"
                 android:id="@+id/choice_preview_description"
-                android:text="Totale"
-                android:textStyle="bold"
-                android:textSize="@dimen/title_text_size"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content" />
-            <LinearLayout
-                android:layout_weight="1"
-                android:layout_width="0dp"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:orientation="horizontal">
+                android:text="Totale"
+                android:textSize="@dimen/title_text_size"
+                android:textStyle="bold" />
+
+
+
                 <TextView
-                    android:layout_weight="1"
-                    android:layout_width="0dp"
+                    android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="end"
                     android:paddingRight="@dimen/currency_right_margin"
+                    android:text="@string/menu_list_item_currency"
                     android:textAlignment="textEnd"
                     android:textSize="@dimen/title_text_size"
-                    android:text="@string/menu_list_item_currency"/>
+                    android:layout_alignParentTop="true"
+                    android:layout_toLeftOf="@+id/choice_preview_price"
+                    android:layout_toStartOf="@+id/choice_preview_price" />
+
                 <TextView
                     android:id="@+id/choice_preview_price"
-                    android:layout_width="0dp"
-                    android:layout_weight="1"
+                    android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="end"
+                    android:text="0.00"
                     android:textAlignment="textEnd"
-                    android:textStyle="bold"
                     android:textSize="@dimen/title_text_size"
-                    android:text="9999" />
-            </LinearLayout>
+                    android:textStyle="bold"
+                    android:layout_alignParentTop="true"
+                    android:layout_alignParentRight="true"
+                    android:layout_alignParentEnd="true" />
+            </RelativeLayout>
 
-        </LinearLayout>
+
     </LinearLayout>
 
     <LinearLayout
